--- a/ruff.toml
+++ b/ruff.toml
@@ -1,2 +1,12 @@
+target-version = "py310"
+line-length = 100
+indent-width = 4
+
+[lint]
+select = ["E", "W", "F", "I", "UP", "B"]
+ignore = ["W191", "D206", "UP015", "E203", "E266"]
+
 [format]
 indent-style = "tab"
+quote-style = "preserve"
+skip-magic-trailing-comma = false
