--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
+[tool.ruff]
 target-version = "py310"
 line-length = 100
 indent-width = 4
 
-[lint]
+[tool.ruff.lint]
 select = ["E", "W", "F", "I", "UP", "B"]
 ignore = ["W191", "D206", "UP015", "E203", "E266"]
 
-[format]
+[tool.ruff.format]
 indent-style = "tab"
 quote-style = "preserve"
 skip-magic-trailing-comma = false
