--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,25 @@ indent-width = 4
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "UP", "B"]
-ignore = ["W191", "D206", "UP015", "E203", "E266"]
+ignore = [
+	"W191",
+	"D206",
+	"UP015",
+	"E203",
+	"E266",
+	"D107",
+	"D100",
+	"D101",
+	"D102",
+	"D401",
+	"D400",
+	"D205",
+]
 
 [tool.ruff.format]
 indent-style = "tab"
 quote-style = "preserve"
 skip-magic-trailing-comma = false
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
