--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ignore = [
 
 [tool.ruff.format]
 indent-style = "tab"
+line-ending = "auto"
 quote-style = "preserve"
 skip-magic-trailing-comma = false
 
